Fixed PE not showing

--- a/extensions/amp-story-dev-tools/0.1/amp-story-dev-tools-tab-page-experience.css
+++ b/extensions/amp-story-dev-tools/0.1/amp-story-dev-tools-tab-page-experience.css
@@ -16,7 +16,8 @@
 
 amp-story-dev-tools-tab-page-experience {
   margin: 0px 10% !important;
-  margin-bottom: var(--i-amphtml-story-dev-tools-vertical-spacing);
+  padding-bottom: var(--i-amphtml-story-dev-tools-vertical-spacing);
+  flex: 1 !important;
 }
 
 amp-story-dev-tools-tab-page-experience iframe {
